# archivist

./: .gitignore  Cargo.toml  Cli.fs  ConfigStore.fs  Domain.fs  Paths.fs  PodcastDl.fs  ProcessRunner.fs  Program.fs  README.md  YtDlp.fs  archivist.fsproj  resume
docs/: agents.md  architecture.md  update_notes.txt
src/: config.rs  input.rs  main.rs  paths.rs  podcast_dl.rs  process.rs  types.rs  util.rs  yt_dlp.rs
